<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.example.uhf_bluetoothclient.viewmodel.MyViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.ScanFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.06" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.6" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.78" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.85" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <TextView
                android:id="@+id/tv_id_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:gravity="center"
                android:text="@string/tv_id_title"
                app:layout_constraintBottom_toTopOf="@+id/guideline11"
                app:layout_constraintEnd_toStartOf="@+id/guideline16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_epc_or_tid_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tv_epc_or_tid_title"
                app:layout_constraintBottom_toTopOf="@+id/guideline11"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline16"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_tag_count_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/tv_tag_count_title"
                app:layout_constraintBottom_toTopOf="@+id/guideline14"
                app:layout_constraintEnd_toStartOf="@+id/tv_tag_count"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline13" />

            <TextView
                android:id="@+id/tv_runTime_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_runTime_title"
                app:layout_constraintBottom_toTopOf="@+id/guideline14"
                app:layout_constraintEnd_toStartOf="@+id/tv_runTime"
                app:layout_constraintStart_toStartOf="@+id/guideline15"
                app:layout_constraintTop_toTopOf="@+id/guideline13" />

            <!--                android:text="@{vm.countLiveData}"-->
            <TextView
                android:id="@+id/tv_tag_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="#DD2C00"
                app:layout_constraintBottom_toBottomOf="@+id/tv_tag_count_title"
                app:layout_constraintEnd_toStartOf="@+id/guideline15"
                app:layout_constraintStart_toEndOf="@+id/tv_tag_count_title"
                app:layout_constraintTop_toTopOf="@+id/tv_tag_count_title"
                tools:text="0" />

            <TextView
                android:id="@+id/tv_runTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="#DD2C00"
                app:layout_constraintBottom_toBottomOf="@+id/tv_runTime_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tv_runTime_title"
                app:layout_constraintTop_toTopOf="@+id/tv_runTime_title"
                tools:text="0" />

            <TextView
                android:id="@+id/tv_session_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/tv_session_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/spinner_session"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline14" />

            <Spinner
                android:id="@+id/spinner_session"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="@+id/tv_session_title"
                app:layout_constraintEnd_toStartOf="@+id/guideline15"
                app:layout_constraintStart_toEndOf="@+id/tv_session_title"
                app:layout_constraintTop_toTopOf="@+id/tv_session_title"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/btn_scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_scan_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_clear"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/spinner_session"
                app:layout_constraintTop_toTopOf="@+id/guideline14" />

            <CheckBox
                android:id="@+id/checkBox_antenna1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkBox_antenna1"
                app:layout_constraintBottom_toTopOf="@+id/checkBox_antenna5"
                app:layout_constraintEnd_toStartOf="@+id/checkBox_antenna2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline12" />

            <CheckBox
                android:id="@+id/checkBox_antenna2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkBox_antenna2"
                app:layout_constraintBottom_toBottomOf="@+id/checkBox_antenna1"
                app:layout_constraintEnd_toStartOf="@+id/checkBox_antenna3"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/checkBox_antenna1"
                app:layout_constraintTop_toTopOf="@+id/checkBox_antenna1" />

            <CheckBox
                android:id="@+id/checkBox_antenna3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkBox_antenna3"
                app:layout_constraintBottom_toBottomOf="@+id/checkBox_antenna2"
                app:layout_constraintEnd_toStartOf="@+id/checkBox_antenna4"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/checkBox_antenna2"
                app:layout_constraintTop_toTopOf="@+id/checkBox_antenna2" />

            <CheckBox
                android:id="@+id/checkBox_antenna4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkBox_antenna4"
                app:layout_constraintBottom_toBottomOf="@+id/checkBox_antenna3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/checkBox_antenna3"
                app:layout_constraintTop_toTopOf="@+id/checkBox_antenna3" />

            <CheckBox
                android:id="@+id/checkBox_antenna5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkBox_antenna5"
                app:layout_constraintBottom_toTopOf="@+id/guideline13"
                app:layout_constraintEnd_toStartOf="@+id/checkBox_antenna6"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox_antenna1" />

            <CheckBox
                android:id="@+id/checkBox_antenna6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkBox_antenna6"
                app:layout_constraintBottom_toBottomOf="@+id/checkBox_antenna5"
                app:layout_constraintEnd_toStartOf="@+id/checkBox_antenna7"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/checkBox_antenna5"
                app:layout_constraintTop_toTopOf="@+id/checkBox_antenna5" />

            <CheckBox
                android:id="@+id/checkBox_antenna7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkBox_antenna7"
                app:layout_constraintBottom_toBottomOf="@+id/checkBox_antenna6"
                app:layout_constraintEnd_toStartOf="@+id/checkBox_antenna8"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/checkBox_antenna6"
                app:layout_constraintTop_toTopOf="@+id/checkBox_antenna6" />

            <CheckBox
                android:id="@+id/checkBox_antenna8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkBox_antenna8"
                app:layout_constraintBottom_toBottomOf="@+id/checkBox_antenna7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/checkBox_antenna7"
                app:layout_constraintTop_toTopOf="@+id/checkBox_antenna7" />

            <!--                android:adapter="@{vm.tagInfoRecyclerViewAdapter}"
                app:layoutManager="@{vm.staggeredGridLayoutManager}"-->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_taginfo"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline11" />

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_clear"
                app:layout_constraintBottom_toBottomOf="@+id/btn_scan"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btn_scan"
                app:layout_constraintTop_toTopOf="@+id/btn_scan" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.25" />

            <View
                android:id="@+id/divider4"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toTopOf="@+id/guideline11"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline11" />

            <View
                android:id="@+id/divider5"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/divider6"
                android:layout_width="2dp"
                android:layout_height="0dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toTopOf="@+id/guideline11"
                app:layout_constraintEnd_toStartOf="@+id/guideline16"
                app:layout_constraintStart_toStartOf="@+id/guideline16"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>